添加deleteById的自动化操作